<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:layout_gravity="center" >
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/exit"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:text="@string/exit_app"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
           <RadioButton 
               android:id="@+id/my_rbtn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:button="@drawable/radiobutton"
               android:text="@string/eixt_text"
               android:textColor="@android:color/black"
               android:textSize="15sp"/>
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#D1D1D1" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/cancel_btn_select"
                android:text="@string/cancel" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#D1D1D1" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/confirm_btn_select"
                android:text="@string/confirm" />
        </LinearLayout>
         
    </LinearLayout>
    

</ScrollView>
